--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.23)
+cmake_minimum_required(VERSION 3.21.1)
 project(CPP_Priactice)
 
 set(CMAKE_CXX_STANDARD 14)
@@ -12,3 +12,7 @@ add_executable(external_var dailytrial/d221120/test_external_var/external_var.cp
 add_executable(test_reference dailytrial/d221121/test_reference.cpp)
 add_executable(test_pointer dailytrial/d221121/test_pointer.cpp)
 add_executable(test_const dailytrial/d221121/test_const.cpp)
+add_executable(test_constexpr dailytrial/d221122/test_constexpr.cpp)
+add_executable(test_typealias dailytrial/d221122/test_typealias.cpp)
+add_executable(test_structure dailytrial/d221122/test_structure.cpp)
+add_executable(test_string dailytrial/d221122/test_string.cpp)
